--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.1.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/amqplib": "^0.8.2",
     "amqp-connection-manager": "^4.1.7",
     "amqplib": "^0.10.3",
     "moment": "^2.29.4",
